--- a/configs/bedlam_cliff.yaml
+++ b/configs/bedlam_cliff.yaml
@@ -13,7 +13,7 @@ DATASET:
   VAL_DS: 3dpw-test-cam
   CROP_PERCENT: 0.8
   ALB: true
-EXP_NAME: bedlam_cam_ready
+EXP_NAME: bedlam_cliff
 LOG_DIR: logs
 OPTIMIZER:
   LR: 5.0e-05
