--- a/configs/bedlam_diff.yaml
+++ b/configs/bedlam_diff.yaml
@@ -13,7 +13,7 @@ DATASET:
   VAL_DS: 3dpw-test-cam
   CROP_PERCENT: 0.8
   ALB: true
-EXP_NAME: bedlam_diff_unet4ch
+EXP_NAME: bedlam_diff_unet1024ch_gain0.01_xavierinit
 LOG_DIR: logs
 OPTIMIZER:
   LR: 5.0e-05
