--- a/configs/bedlam_diff.yaml
+++ b/configs/bedlam_diff.yaml
@@ -2,8 +2,7 @@ DATASET:
   BATCH_SIZE: 64
   CROP_FACTOR: 0.5
   CROP_PROB: 0.2
-  DATASETS_AND_RATIOS: 'zoom-suburbd'
-  #DATASETS_AND_RATIOS: 'static-hdri_agora-bfh_agora-body_zoom-suburbd_closeup-suburba_closeup-suburbb_closeup-suburbc_closeup-suburbd_closeup-gym_zoom-gym_static-gym_static-office_orbit-office_static-hdri-zoomed_pitchup-stadium_pitchdown-stadium_static-hdri-bmi_closeup-suburbb-bmi_closeup-suburbc-bmi_static-suburbd-bmi_zoom-gym-bmi_static-office-hair_zoom-suburbd-hair_static-gym-hair_orbit-archviz-15_orbit-archviz-19_orbit-archviz-12_orbit-archviz-10'
+  DATASETS_AND_RATIOS: 'static-hdri_agora-bfh_agora-body_zoom-suburbd_closeup-suburba_closeup-suburbb_closeup-suburbc_closeup-suburbd_closeup-gym_zoom-gym_static-gym_static-office_orbit-office_static-hdri-zoomed_pitchup-stadium_pitchdown-stadium_static-hdri-bmi_closeup-suburbb-bmi_closeup-suburbc-bmi_static-suburbd-bmi_zoom-gym-bmi_static-office-hair_zoom-suburbd-hair_static-gym-hair_orbit-archviz-15_orbit-archviz-19_orbit-archviz-12_orbit-archviz-10'
   IMG_RES: 224
   MESH_COLOR: pinkish
   NOISE_FACTOR: 0.4
@@ -14,12 +13,12 @@ DATASET:
   VAL_DS: 3dpw-test-cam
   CROP_PERCENT: 0.8
   ALB: true
-EXP_NAME: bedlam_diff_unet1024ch_gain0.01_xavierinit
+EXP_NAME: bedlam_diff_unet1024ch_gain0.01_lr1e5_wd1e5_adamw
 LOG_DIR: logs
 OPTIMIZER:
-  LR: 5.0e-05
-  TYPE: adam
-  WD: 0.0
+  LR: 1.0e-05
+  TYPE: adamw
+  WD: 1.0e-05
 MODEL:
   BACKBONE: sd2_0
   #BACKBONE: hrnet_w48-conv
